app-test/testdata/typesystem/neg/field-access-with-any-type/check/field2.check
Error in "testdata/typesystem/neg/field-access-with-any-type/src/field.cal" on line 10:
            OUT <-- u.foo; // error
                    ^
Not a product.